--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:screenOrientation="landscape">
 
+        <activity android:name=".StartGameActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".LooseScreenActivity"
+            android:screenOrientation="landscape"/>
+
+        <activity android:name=".WinScreenActivity"
+            android:screenOrientation="landscape"/>
+
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape">
         </activity>
     </application>
 
